--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         php: ['7.4', '8.0', '8.1']
         dependency-version: [prefer-stable]
 
@@ -27,7 +27,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
-        extensions:  pcntl
+        extensions:  pcntl, mcrypt_create_iv
         ini-values: disable_functions, error_reporting=E_ALL
         tools: composer:v2
         coverage: xdebug
